Fixed overlapping forst letter  in the  form User Name

--- a/CSS/survey.css
+++ b/CSS/survey.css
@@ -44,6 +44,11 @@ header{
   padding-top: 15%;
 }
 
+.nutrition {
+  text-align: left!important;
+}
+
+
 h1{
   text-align: center;
 }
@@ -345,6 +350,8 @@ input[type=text], select, textarea {
 
 }
 
+
+
  /* Style inputs with type="text", select elements and textareas */
  input[type=time], select, textarea {
   width: 100%; /* Full width */
@@ -506,21 +513,6 @@ body,td,th {
   font-size: 1.4;
 }
 
-/* #welcome h2{
-	color: white;
-    font-size: 1.7em;
-} */
-/* #welcome p{
-	color: white;
-} */
-
-
-
-
-
-
-
-
 #navigation {
     /* background-color: #1A1110; */
     background-color: var(--my-background-color);
@@ -551,16 +543,6 @@ body,td,th {
   color: var(--my-text-color);
 }
 
-
-/* #google-map{
-width:400px;
-height:300px;
-border:0; 
- } */
-
-
-
-
 #last {
   padding-bottom: 25%;
 }
@@ -587,6 +569,9 @@ footer a:hover{
 }
 
 
-
+textarea::placeholder {
+  padding-left: 5%!important;
+  margin-left: 1%;
+}
 
 
